<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this)-->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ScrollView
            android:id="@+id/scroll_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/india_try_login_background"
            android:fillViewport="true"
            android:padding="8dp"
            android:scrollbars="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="226dp"
                    android:layout_height="171dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="220dp"
                    android:src="@drawable/india_try_logo"
                    tools:ignore="ContentDescription"
                    tools:text="ImageView Logo" />

                <EditText
                    android:id="@+id/et_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:hint="@string/et_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="#80757575"
                    tools:text="Email/Mobile Number" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/et_password"
                    android:background="#80757575"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:text="Password" />

                <View
                    android:id="@+id/line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_forgot_password"
                        android:layout_marginTop="10dp"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/bt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_button"
                        android:layout_alignParentEnd="true"
                        android:text="@string/bt_login"
                        android:layout_marginEnd="16dp"
                        android:textColor="#ffffff" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <com.shobhitpuri.custombuttons.GoogleSignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:isDarkTheme="true"
                        android:text="@string/bt_google_signin"
                        android:layout_gravity="center_horizontal"/>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                            />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_privacy_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="18dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/tv_privacy_terms"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/header_layout"/>
</android.support.v4.widget.DrawerLayout>
